--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
 
 #console {
 	font-family: courier, monospace;
-	color: #FD5602;
+	color: #E60;
 	width:750px;
 	margin-left:auto;
 	margin-right:auto;
