--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 a {
-	color: #FFF;
+	color: #fff;
 	text-decoration: none;
 }
 
@@ -30,7 +30,7 @@ a {
 }
 
 #b {
-	color: #ff0096;
+	color: #fff;
 }
 
 #k {
